# type-structure

./: type-structure.cabal
src/: HTFTestSuite.hs  TypeStructure.hs  TypeStructureTest.hs
src/TypeStructure/: Class.hs  Graph.hs  Model.hs  TH.hs  THTest.hs
src/TypeStructure/Prelude/: Basic.hs  Data.hs  TH.hs  Transformers.hs
src/TypeStructure/TH/: Analysis.hs  Model.hs  Template.hs
src/TypeStructure/TH/Templates/: Declaration.hs  Instance.hs  Type.hs  TypeCon.hs
