name:
  type-structure
version:
  0.1.0
synopsis:
  Type structure analysis
description:
  Provides facilities to match type structures.

  Useful for checking protocol compliance in client-server applications.
category:
  Data
homepage:
  https://github.com/nikita-volkov/type-structure 
bug-reports:
  https://github.com/nikita-volkov/type-structure/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2013, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/type-structure.git


library
  hs-source-dirs:
    src
  other-modules:
    TypeStructure.TH.Analysis
    TypeStructure.TH.Templates.Instance
    TypeStructure.TH.Templates.TypeCon
    TypeStructure.TH.Templates.Type
    TypeStructure.TH.Templates.Declaration
    TypeStructure.TH
    TypeStructure.Graph
    TypeStructure.Class
    TypeStructure.Prelude.Basic
    TypeStructure.Prelude.Data
    TypeStructure.Prelude.Transformers
    TypeStructure.Prelude.TH
  exposed-modules:
    TypeStructure
  ghc-options:
    -ddump-splices
  build-depends:
    -- data:
    bytestring,
    text,
    hashable,
    unordered-containers == 0.2.*,
    -- control:
    lens,
    transformers,
    mtl,
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    template-haskell,
    base >= 4.5 && < 5
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
  default-language:
    Haskell2010

